# sni-proxy

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  DUAL_WHITELIST.md  Dockerfile  EBPF_FINAL_STATUS.md  EBPF_INTEGRATION_STATUS.md  EBPF_MAP_REWRITE_PROGRESS.md  EBPF_OPTIMIZATION.md  EBPF_QUICKSTART.md  EBPF_TESTING.md  IP_TRAFFIC_TRACKING.md  IP_WHITELIST.md  LOG_CONFIG.md  Makefile  OPT.md  PERFORMANCE.md  README.md  RUNTIME_OPTIMIZATION.md  RUNTIME_TUNING.md  STABILITY_IMPROVEMENTS.md  STREAMING_OPTIMIZATION.md  TCP_FAST_OPEN.md  build.rs  config-debug-ip.json  config-debug.json  config-dual-whitelist.json  config-ebpf.json  config-file-only.json  config-ip-test.json  config-ip-traffic-tracking.json  config-ip-whitelist.json  config-test.json  config.docker.json  config.example.json  config.json  test_connection_stats.sh  test_ip_whitelist.sh  test_proxy.sh
.cargo/: config.toml
.github/workflows/: build.yml
ebpf/: Cargo.toml  README.md
ebpf/src/: bindings.rs  main.rs
examples/: ebpf_demo.rs  logger_example.rs  logger_file_example.rs
scripts/: build-ebpf.sh
src/: basic_usage.rs  dns.rs  domain.rs  domain_ip_tracker.rs  ip_matcher.rs  ip_traffic.rs  lib.rs  logger.rs  main.rs  metrics.rs  proxy.rs  server.rs  socks5.rs  tls.rs
src/ebpf/: dns_cache.rs  manager.rs  mod.rs  sockmap.rs  stats.rs  types.rs  xdp.rs
