[package]
name = "sni-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"
lazy_static = "1.4"
libc = "0.2.177"
socket2 = "0.5"
num_cpus = "1.16"
futures = "0.3"

# eBPF 依赖（可选，用于高性能加速）
# 取消注释以启用 eBPF 功能
# aya = { version = "0.12", optional = true }
# aya-log = { version = "0.2", optional = true }

[features]
default = []
# 取消注释以启用 eBPF 功能
# ebpf = ["aya", "aya-log"]
